[tool.poetry]
name = "authentication(mongoengine)"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.0"
mongoengine = "^0.28.2"
requests = "^2.32.3"
uvicorn = "^0.30.5"
passlib = "^1.7.4"
pycryptodome = "^3.20.0"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"
pymongo = "^4.8.0"
certifi = "^2024.7.4"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
